[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/theme/main.theme" type="Theme" id=1]
[ext_resource path="res://ui/menus/lobby/Lobby.gd" type="Script" id=2]
[ext_resource path="res://ui/menus/lobby/Disclaimer.gd" type="Script" id=3]
[ext_resource path="res://ui/ubuntu-bold-small.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/menus/lobby/GameConfig.tscn" type="PackedScene" id=5]

[node name="Lobby" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Center" type="CenterContainer" parent="."]
margin_left = 411.0
margin_top = 290.0
margin_right = 1011.0
margin_bottom = 509.0

[node name="VBox" type="VBoxContainer" parent="Center"]
margin_right = 600.0
margin_bottom = 219.0

[node name="GameConfig" parent="Center/VBox" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 727.0
margin_bottom = 450.0

[node name="stophost" type="Button" parent="Center/VBox"]
unique_name_in_owner = true
visible = false
margin_right = 296.0
margin_bottom = 102.0
focus_mode = 0
size_flags_horizontal = 4
text = "stop hosting"

[node name="Address" type="LineEdit" parent="Center/VBox"]
unique_name_in_owner = true
margin_right = 600.0
margin_bottom = 102.0
rect_min_size = Vector2( 600, 0 )
hint_tooltip = "people will be able to join this gamecode"
focus_mode = 1
text = "game_code"
align = 1
max_length = 10
placeholder_text = "game_code"
caret_blink = true
caret_blink_speed = 0.5

[node name="buttons" type="HBoxContainer" parent="Center/VBox"]
margin_top = 117.0
margin_right = 600.0
margin_bottom = 219.0

[node name="SpectateButton" type="Button" parent="Center/VBox/buttons"]
margin_right = 223.0
margin_bottom = 102.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "spectate"

[node name="JoinButton" type="Button" parent="Center/VBox/buttons"]
margin_left = 238.0
margin_right = 406.0
margin_bottom = 102.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "join the game"
focus_mode = 0
size_flags_horizontal = 7
disabled = true
text = "join"

[node name="HostButton" type="Button" parent="Center/VBox/buttons"]
unique_name_in_owner = true
margin_left = 421.0
margin_right = 600.0
margin_bottom = 102.0
hint_tooltip = "create a game"
focus_mode = 0
size_flags_horizontal = 7
disabled = true
text = "create"

[node name="StatusOK" type="Label" parent="Center/VBox"]
unique_name_in_owner = true
visible = false
margin_top = 242.0
margin_right = 350.0
margin_bottom = 292.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
autowrap = true

[node name="StatusFail" type="Label" parent="Center/VBox"]
unique_name_in_owner = true
visible = false
margin_top = 242.0
margin_right = 350.0
margin_bottom = 292.0
custom_colors/font_color = Color( 0.698039, 0.415686, 0.415686, 1 )
autowrap = true

[node name="Disclaimer" type="Label" parent="Center/VBox"]
visible = false
margin_top = 242.0
margin_right = 350.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "  Currently logged out. 
  Upon disconnect, you
  will be unable to rejoin. "
valign = 1
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Center/VBox/Disclaimer"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -46.0
color = Color( 0.588235, 0.560784, 0.309804, 1 )

[connection signal="pressed" from="Center/VBox/stophost" to="." method="_on_stophost_pressed"]
[connection signal="pressed" from="Center/VBox/buttons/SpectateButton" to="." method="_on_spectate_pressed"]
[connection signal="pressed" from="Center/VBox/buttons/JoinButton" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Center/VBox/buttons/HostButton" to="." method="_on_HostButton_pressed"]
